# ltm-engine

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: API_TESTING_GUIDE.md  ARCHITECTURE.md
scripts/: __init__.py  demo.py
src/ltm_engine/: __init__.py  config.py  dependencies.py  main.py
src/ltm_engine/api/: __init__.py  router.py
src/ltm_engine/models/: __init__.py  base.py  episodic.py  events.py  procedural.py  semantic.py
src/ltm_engine/providers/: __init__.py  base.py  embedding.py  llm.py  ollama_embedding.py  ollama_llm.py
src/ltm_engine/repositories/: __init__.py  postgres.py  qdrant.py
src/ltm_engine/schemas/: __init__.py  memory.py  requests.py  responses.py
src/ltm_engine/services/: __init__.py  confidence.py  conflict.py  consolidation.py  lifecycle.py  memory_service.py  replay.py  retrieval.py
src/ltm_engine/utils/: __init__.py  scoring.py
tests/: __init__.py
