[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ltm-engine"
version = "1.0.0"
description = "Long-Term Memory Engine for LLM-based applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LTM Engine Team"}
]
keywords = ["llm", "memory", "agents", "ai", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.12.0",
    "openai>=1.57.0",
    "tenacity>=9.0.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "httpx>=0.28.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
ltm-server = "ltm_engine.main:run"
ltm-demo = "scripts.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ltm_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
